# tree-sitter-verilog

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  cache.txt  eslint.config.mjs  go.mod  go.sum  grammar.js  index.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: linux.yml  macos.yml  nodejs.yml  windows.yml
bindings/c/: tree-sitter-verilog.h  tree-sitter-verilog.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_verilog/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterVerilogTests/: TreeSitterVerilogTests.swift
corpus/: 5.6.txt  always.txt  assign.txt  directives.txt  function.txt  module.txt  module_instantiation.txt  net_declaration.txt  uvm.txt
examples/: module.v
src/: binding.cc  grammar.json  node-types.json  parser.c
